--- a/Webserver/index.html
+++ b/Webserver/index.html
@@ -45,10 +45,10 @@
 
 						<!-- nav -->
 						<ul class="nav-menu nav navbar-nav">
-							<li class="cat-1"><a href="category.html">Home</a></li>
-							<li class="cat-2"><a href="category.html">Show Info</a></li>
+							<li class="cat-1"><a href="index.html">Home</a></li>
+							<li class="cat-2"><a href="showinfo.html">Show Info</a></li>
 							<li class="cat-3"><a href="category.html">Chatroom</a></li>
-							<li class="cat-4"><a href="category.html">Jquery</a></li>
+							<li class="cat-4"><a href="category.html">Log of user</a></li>
 						</ul>
 						<!-- /nav -->
 
@@ -466,8 +466,9 @@
 						<!-- ad -->
 						<div class="aside-widget text-center">
 							<a href="#" style="display: inline-block;margin: auto;">
-								<img class="img-responsive" src="./img/ad-1.jpg" alt="">
+								<img class="img-responsive" src="./img/ad.jpeg" alt="">
 							</a>
+							Contact advertising
 						</div>
 						<!-- /ad -->
 					</div>
@@ -631,7 +632,7 @@
 							</ul>
 							<div class="footer-copyright">
 								<span>&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://github.com/ductbmd" target="_blank">Tbmd</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></span>
 							</div>
 						</div>
