--- a/Webserver/blog-post.html
+++ b/Webserver/blog-post.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-		<title>WebMag HTML Template</title>
+		<title>WebServer BLT Group9</title>
 
 		<!-- Google font -->
 		<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:700%7CNunito:300,600" rel="stylesheet"> 
@@ -45,10 +45,10 @@
 
 						<!-- nav -->
 						<ul class="nav-menu nav navbar-nav">
-							<li class="cat-1"><a href="category.html">Home</a></li>
-							<li class="cat-2"><a href="category.html">Show Info</a></li>
+							<li class="cat-1"><a href="index.html">Home</a></li>
+							<li class="cat-2"><a href="showinfo.html">Show Info</a></li>
 							<li class="cat-3"><a href="category.html">Chatroom</a></li>
-							<li class="cat-4"><a href="category.html">Log of user</a></li>
+							<li class="cat-4"><a href="logofuser.html">Log of user</a></li>
 						</ul>
 						<!-- /nav -->
 
