--- a/Webserver/showinfo.html
+++ b/Webserver/showinfo.html
@@ -139,6 +139,26 @@
 				<div class="row">
 					<div class="col-md-12 text-center" >
 						<h2>User Information</h2>
+						<div class="footer-newsletter">
+							<form method="POST">
+								<input class="input" type="text" name="search" placeholder="Search somthing here">
+								<button class="newsletter-btn"><i class="fa fa-paper-plane"></i></button>
+								<label class="checkbox-inline">
+								  <input type="checkbox" value="">Search by name
+								</label>
+								<label class="checkbox-inline">
+								  <input type="checkbox" value="">Search by email
+								</label>
+								<label class="checkbox-inline">
+								  <input type="checkbox" value="">Search by ...
+								</label>
+								<label class="checkbox-inline">
+								  <input type="checkbox" value="">Search all
+								</label>
+
+							</form>
+						</div>
+						<hr><hr>
 						<table  class="table table-bordered">
 							<thead>
 								<tr>
@@ -151,7 +171,7 @@
 							</thead>
 							<tbody>
 								<tr>
-									<th>MinhDuc</th>
+									<td>MinhDuc</td>
 									<th>123456</th>
 									<th>To Ba</th>
 									<th>Minh Duc</th>
